<resources>
    <string name="app_name">MusicApp</string>
    <string name="main_menu_string">Main Menu</string>
    <string name="all_songs_string">All Songs</string>
    <string name="all_playlists_string">All Playlists</string>
    <string name="all_artists_string">All Artists</string>
    <string name="all_albums_string">All Albums</string>
    <string name="pause_text">Pause</string>
    <string name="play_text">Play</string>
    <string name="current_song_text">Currently Playing</string>
    <string name="playlist_edittext_hint">Playlist Name</string>
    <string name="playlist_button_text">Enter</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="new_playlist_button_text">+ New Playlist</string>
    <string name="delete_playlist_button_text">- Delete Playlist</string>
    <string name="final_delete_button_text">Delete</string>
    <string name="add_songs_text">+ Add songs</string>
    <string name="delete_songs_text">- Delete songs</string>
    <string name="done_deleting_songs_text">Delete</string>
    <string name="cancel_deleting_songs_text">Cancel</string>

</resources>
